@@ -171,7 +171,7 @@
             <pre>
                 cd $JLAB_ROOT
                 wget http://www.jlab.org/12gev_phys/packages/sources/ceInstall/ceInstall_devel.tar.gz
-                tar -zxpvf ceInstall_devel.tar.gz
+				tar -zxpvf ceInstall_devel.tar.gz --strip-components 1 -C devel
             </pre>
             
         </li>
@@ -190,25 +190,25 @@
         
         <li>Start a new shell. Now you should see a log similar to this
             <pre>
-                > Common Environment Version: <devel>  (Wed March 21 2018)
-                > Running as ungaro on MauriMP.local
-                > OS Release:    Darwin_macosx10.13-x86_64-clang9.0.0
-                > JLAB_ROOT set to:     /opt/jlab_software
-                > '/opt/jlab_software/devel/Darwin_macosx10.13-x86_64-clang9.0.0' is not a directory. Creating it.
+ > Common Environment Version: <devel>  (Wed March 18 2018)
+ > Running as ungaro on wifi-81-71.jlab.org
+ > OS Release:    Darwin_macosx10.13-x86_64-clang9.0.0
+ > JLAB_ROOT set to:     /opt/jlab_software
+ > '/opt/jlab_software/devel/Darwin_macosx10.13-x86_64-clang9.0.0' is not a directory. Creating it.
 
-                !! Attention:  BANKS  installation check /opt/jlab_software/devel/Darwin_macosx10.13-x86_64-clang9.0.0/banks/devel/bin  not found
-                !! Attention:  CCDB  installation check /opt/jlab_software/devel/Darwin_macosx10.13-x86_64-clang9.0.0/ccdb/ccdb-1.06.02.00/lib  not found
-                !! Attention:  CLHEP  installation check /opt/jlab_software/devel/Darwin_macosx10.13-x86_64-clang9.0.0/clhep/2.3.4.3/lib  not found
-                !! Attention:  EVIO  installation check /opt/jlab_software/devel/Darwin_macosx10.13-x86_64-clang9.0.0/ccdb/ccdb-1.06.02.00/bin  not found
-                !! Attention:  GEANT4  installation check /opt/jlab_software/devel/Darwin_macosx10.13-x86_64-clang9.0.0/geant4/4.10.03/bin  not found
-                !! Attention:  GEMC  installation check /opt/jlab_software/devel/Darwin_macosx10.13-x86_64-clang9.0.0/gemc/devel/gemc  not found
-                !! Attention:  JANA  installation check /opt/jlab_software/devel/Darwin_macosx10.13-x86_64-clang9.0.0/jana/0.7.7p1/bin/jana  not found
-                !! Attention:  MLIBRARY  installation check /opt/jlab_software/devel/Darwin_macosx10.13-x86_64-clang9.0.0/mlibrary/devel/lib  not found
-                !! Attention:  MYSQL  installation check /opt/jlab_software/devel/Darwin_macosx10.13-x86_64-clang9.0.0/mysql/lib  not found
-                !! Attention:  QT    installation check /opt/jlab_software/devel/Darwin_macosx10.13-x86_64-clang9.0.0/qt/5.8.0/5.8/clang_64/lib  not found
-                !! Attention:  ROOT  installation check /opt/jlab_software/devel/Darwin_macosx10.13-x86_64-clang9.0.0/root/6.08.04/bin/root-config  not found
-                !! Attention:  SCONS  installation check /opt/jlab_software/devel/scons_bm/devel/site_tools  not found
-                !! Attention:  XERCESC  installation check /opt/jlab_software/devel/Darwin_macosx10.13-x86_64-clang9.0.0/xercesc/3.1.4/lib  not found
+ !! Attention:  BANKS  installation check /opt/jlab_software/devel/Darwin_macosx10.13-x86_64-clang9.0.0/banks/1.4/bin  not found
+ !! Attention:  CCDB  installation check /opt/jlab_software/devel/Darwin_macosx10.13-x86_64-clang9.0.0/ccdb/ccdb-1.06.02/lib  not found
+ !! Attention:  CLHEP  installation check /opt/jlab_software/devel/Darwin_macosx10.13-x86_64-clang9.0.0/clhep/2.3.4.5/lib  not found
+ !! Attention:  EVIO  installation check /opt/jlab_software/devel/Darwin_macosx10.13-x86_64-clang9.0.0/evio/5.1/bin  not found
+ !! Attention:  GEANT4  installation check /opt/jlab_software/devel/Darwin_macosx10.13-x86_64-clang9.0.0/geant4/4.10.03.p02/bin  not found
+ !! Attention:  GEMC  installation check /opt/jlab_software/devel/Darwin_macosx10.13-x86_64-clang9.0.0/gemc/2.7/gemc  not found
+ !! Attention:  JANA  installation check /opt/jlab_software/devel/Darwin_macosx10.13-x86_64-clang9.0.0/jana/0.7.7p1/bin/jana  not found
+ !! Attention:  MLIBRARY  installation check /opt/jlab_software/devel/Darwin_macosx10.13-x86_64-clang9.0.0/mlibrary/1.2/lib  not found
+ !! Attention:  MYSQL  installation check /opt/jlab_software/devel/Darwin_macosx10.13-x86_64-clang9.0.0/mysql/lib  not found
+ !! Attention:  QT    installation check /opt/jlab_software/devel/Darwin_macosx10.13-x86_64-clang9.0.0/qt/5.9.1/5.9.1/clang_64/lib  not found
+ !! Attention:  ROOT  installation check /opt/jlab_software/devel/Darwin_macosx10.13-x86_64-clang9.0.0/root/6.12.06/bin/root-config  not found
+ !! Attention:  SCONS  installation check /opt/jlab_software/devel/scons_bm/1.6/site_tools  not found
+ !! Attention:  XERCESC  installation check /opt/jlab_software/devel/Darwin_macosx10.13-x86_64-clang9.0.0/xercesc/3.2.0/lib  not found
 			</pre>
             
         </li>
